# training_flask_python

./: .gitignore  CHANGELOG.md  pyproject.toml
website/: __init__.py  urls.py
website/apps/account/: auth.py  views.py
website/templates/: __base.html  home.html
website/templates/account/: login.html  logout.html  sign_up.html
