[tool.poetry]
name = "training-flask-python"
version = "0.1.0"
description = ""
authors = ["Leo Graciano <leonardoferreiragraciano@gmail.com>"]
readme = "README.md"
packages = [{include = "training_flask_python"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
